[project]
name = "dw-extractor"
version = "0.2.0"
description = "Tools to extract Dynamic World data for dynamic temporal windows"
readme = "README.md"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" }
]
requires-python = ">=3.12"
dependencies = [
    "eemont>=2025.7.1",
    "fastparquet>=2024.11.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "osmnx>=2.0.7",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.11.0",
]

[tool.ruff.lint]
fixable = ["F401"]
